Fix footer alignment

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -140,11 +140,13 @@ p {
   // post stuff
   mat-card-footer{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     justify-self: center;
     //align-items: center;
     
+    // padding: 16px 16px 0 16px;
+    padding: 16px;
     max-height: fit-content;
     max-width: 100%;
     box-sizing: border-box;
@@ -154,7 +156,7 @@ p {
     margin: 15px 0;
   }
 
-  mat-card-footer > p{
+  mat-card-footer > div{
     font-size: 1rem;
   }
 
